force-app/main/default/objects/Source_Funding__c/Source_Funding__c.object-meta.xml
<CustomObject>
    <label>Source Funding</label>
    <nameField>
        <label>Source Funding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Source Funding</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>