force-app/main/default/objects/Source_Funding__c/fields/Most_Funding__c.field-meta.xml
<CustomField>
    <fullName>Most_Funding__c</fullName>
    <label>Most Funding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>