force-app/main/default/objects/Source_Funding__c/fields/No_Funding__c.field-meta.xml
<CustomField>
    <fullName>No_Funding__c</fullName>
    <label>No Funding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>