force-app/main/default/objects/Source_Funding__c/fields/Some_Funding__c.field-meta.xml
<CustomField>
    <fullName>Some_Funding__c</fullName>
    <label>Some Funding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>